--- a/web/app/themes/retis/templates/listing-archive.twig
+++ b/web/app/themes/retis/templates/listing-archive.twig
@@ -12,7 +12,7 @@
             <span>Pisos: {{ p.meta('_stories') }}</span>
             <span>Cocheras: {{ p.meta('_garages') }}</span>
           </div>
-          <button class="button bg-light w-full">Ver Propiedad</button>
+          <button class="button bg-light w-full text-base">Contactar para más detalles</button>
         </div>
       {% endfor %}
     </div>
