--- a/web/app/themes/retis/templates/blocks/application_form.twig
+++ b/web/app/themes/retis/templates/blocks/application_form.twig
@@ -45,8 +45,8 @@
     </template>
     <template x-if="bType == 2">
       <div class="flex gap-2 col-span-2">
-        <input placeholder="Min" type="number" name="rent_min" id="rent-min" class="w-full">
-        <input placeholder="Max" type="number" name="rent_max" id="rent-max" class="w-full">
+        <input placeholder="Min" type="number" name="price_min" id="price-min" class="w-full">
+        <input placeholder="Max" type="number" name="price_max" id="price-max" class="w-full">
       </div>
     </template>
     
