--- a/web/app/themes/retis/templates/footer.twig
+++ b/web/app/themes/retis/templates/footer.twig
@@ -1,6 +1,10 @@
 <div class="container mx-auto flex flex-col xl:flex-row py-10 flex-wrap gap-y-6 xl:gap-y-4">
   <div class="xl:w-1/4 xl:border-r border-white">
-    <img class="w-56" src="{{ site.theme.link }}/static/img/desplazable.png" alt="retis desplazable" />
+    <img
+      class="w-56"
+      src="{{ site.theme.link }}/static/img/real-people-blanco.png"
+      alt="retis real people"
+    />
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:border-r border-white xl:pl-4">
     <p>Retis</p>
