fixes on footer

--- a/web/app/themes/retis/templates/footer.twig
+++ b/web/app/themes/retis/templates/footer.twig
@@ -7,13 +7,18 @@
     />
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:border-r border-white xl:pl-4">
-    <p>Retis</p>
-    <p>348 Broker Drive</p>
-    <p>Santa Barbara, CA 93102</p>
+    <p>NMLS 367268</p>
+    <p>Licensed in Nevada, California and Arizona</p>
+    <p>SecurityNational Mortgage, Inc.</p>
+    <P>NMLS 3116</P>
+    <p>2635 St Rose Parkway Suite D-100</p>
+    <p>Henderson, NV 89052 </p>
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:border-r border-r-white xl:pl-4">
-    <p><i class="las la-phone"></i> 800 555 0199</p>
-    <p><i class="las la-envelope"></i> restisemail@example.com</p>
+    <a href="tel:7024806463"><i class="las la-phone"></i> 702.480.6463</a>
+    <p>Direct: 702.487.5626</p>
+    <p>Fax: 702.920.8275</p>
+    <a href="mailto:gretis@cox.net"><i class="las la-envelope"></i> gretis@cox.net</a>
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:pl-4">
     <a href="#"><i class="lab la-whatsapp"></i> Contacto</a>
