--- a/web/app/themes/retis/templates/footer.twig
+++ b/web/app/themes/retis/templates/footer.twig
@@ -21,7 +21,7 @@
     <a href="mailto:gretis@cox.net"><i class="las la-envelope"></i> gretis@cox.net</a>
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:pl-4">
-    <a href="#"><i class="lab la-whatsapp"></i> Contacto</a>
+    <a href="https://wa.me/17024875626"><i class="lab la-whatsapp"></i> Contacto</a>
     <a href="#">Políticas de privacidad</a>
     <a href="#">Términos de servicio</a>
   </div>
