--- a/web/app/themes/retis/templates/menu.twig
+++ b/web/app/themes/retis/templates/menu.twig
@@ -7,10 +7,10 @@
       </li>
     {% endfor %} #}
     <li>
-      <a href="#"><i class="las la-phone text-2xl"></i> <span class="hidden xl:inline">Teléfono</span></a>
+      <a href="tel:7024876463"><i class="las la-phone text-2xl"></i> <span class="hidden xl:inline">Teléfono</span></a>
     </li>
     <li>
-      <a href="#"><i class="lab la-whatsapp text-2xl"></i> <span class="hidden xl:inline">Contacto</span></a>
+      <a href="https://wa.me/17024875626"><i class="lab la-whatsapp text-2xl"></i> <span class="hidden xl:inline">Contacto</span></a>
     </li>
 	</ul>
 {% endif %}
