--- a/web/app/themes/retis/templates/footer.twig
+++ b/web/app/themes/retis/templates/footer.twig
@@ -16,7 +16,7 @@
     <a href="mailto:gretis@cox.net"><i class="las la-envelope"></i> {{ email }}</a>
   </div>
   <div class="xl:w-1/4 flex flex-col gap-1 xl:pl-4">
-    <a href="https://wa.me/1{{ fn('str_replace', ' ', '', phone_direct) }}"><i class="lab la-whatsapp"></i> Contacto</a>
+    <a href="{{ whatsapp }}"><i class="lab la-whatsapp"></i> Contacto</a>
     <a href="{{ fn('get_privacy_policy_url') }}">Políticas de privacidad</a>
     <a href="{{ terms_link }}">Términos de servicio</a>
   </div>
