--- a/web/app/themes/retis/templates/base.twig
+++ b/web/app/themes/retis/templates/base.twig
@@ -22,8 +22,8 @@
               </picture>
             </a>
             <div>
-              <p class="text-3xl">Guillermo A. Retis</p>
-              <p>International Real Estate Agent, SFR</p>
+              <p class="text-xl lg:text-3xl">Guillermo A. Retis</p>
+              <p class="text-xs lg:text-base">International Real Estate Agent, SFR</p>
             </div>
           </div>
 					<nav id="nav-main" class="nav-main flex-grow" role="navigation">
