--- a/web/app/themes/retis/templates/base.twig
+++ b/web/app/themes/retis/templates/base.twig
@@ -22,7 +22,7 @@
               </picture>
             </a>
             <div>
-              <p class="text-xl lg:text-3xl">Guillermo A. Retis</p>
+              <p class="text-xl lg:text-3xl">Guillermo Retis</p>
               <p class="text-xs lg:text-base">International Real Estate Agent, SFR</p>
             </div>
           </div>
