--- a/web/app/themes/retis/templates/archive-listing.twig
+++ b/web/app/themes/retis/templates/archive-listing.twig
@@ -18,10 +18,18 @@
               <span>Ciudad: {{ p.meta('_city') }}</span>
               <span>Tipo: {{ p.meta('_type') }}</span>
               <span>Área: {{ p.meta('_sq_ft') }} m<sup>2</sup></span>
-              <span>Área construida: {{ p.meta('_built_sq_ft') }} m<sup>2</sup></span>
-              <span>Habitaciones: {{ p.meta('_bedrooms') }}</span>
-              <span>Pisos: {{ p.meta('_stories') }}</span>
-              <span>Cocheras: {{ p.meta('_garages') }}</span>
+              {% if p.meta('_built_sq_ft') %}
+                <span>Área construida: {{ p.meta('_built_sq_ft') }} m<sup>2</sup></span>
+              {% endif %}
+              {% if p.meta('_bedrooms') %}
+                <span>Habitaciones: {{ p.meta('_bedrooms') }}</span>
+              {% endif %}
+              {% if p.meta('_stories') %}
+                <span>Pisos: {{ p.meta('_stories') }}</span>
+              {% endif %}
+              {% if p.meta('_garages') %}
+                <span>Cocheras: {{ p.meta('_garages') }}</span>
+              {% endif %}
             </div>
           </div>
         </div>
