--- a/web/app/themes/retis/templates/archive-listing.twig
+++ b/web/app/themes/retis/templates/archive-listing.twig
@@ -33,6 +33,9 @@
               {% if p.meta('_bedrooms') %}
                 <span>Habitaciones: {{ p.meta('_bedrooms') }}</span>
               {% endif %}
+              {% if p.meta('_bathrooms') %}
+                <span>Habitaciones: {{ p.meta('_bathrooms') }}</span>
+              {% endif %}
               {% if p.meta('_stories') %}
                 <span>Pisos: {{ p.meta('_stories') }}</span>
               {% endif %}
