--- a/web/app/themes/retis/templates/archive-listing.twig
+++ b/web/app/themes/retis/templates/archive-listing.twig
@@ -22,10 +22,10 @@
                 <span>Tipo: {{ p.meta('_type') }}</span>
               {% endif %}
               {% if p.meta('_sq_ft') %}
-                <span>Área: {{ p.meta('_sq_ft') }} m<sup>2</sup></span>
+                <span>Área: {{ p.meta('_sq_ft') }} sf</span>
               {% endif %}
               {% if p.meta('_built_sq_ft') %}
-                <span>Área construida: {{ p.meta('_built_sq_ft') }} m<sup>2</sup></span>
+                <span>Área construida: {{ p.meta('_built_sq_ft') }} sf</span>
               {% endif %}
               {% if p.meta('_built_in') %}
                 <span>Construida en: {{ p.meta('_built_in') }}</span>
